# mdb-search

./: .gitignore  Cargo.toml  flake.nix
src/: cb.rs  main.rs  movie.rs  style.rs
src/db/: imdb.rs  mod.rs  tmdb.rs
