[package]
name = "mdb-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11", features = [
    "completion",
    "fuzzy-select",
    "history",
] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json"] }
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
copypasta = "0.10"
wl-clipboard-rs = { version = "0.9", features = ["native_lib"] }
keyring = "3.3"
anyhow = "1.0"
dotenv = "0.15"
